regression/fail/modules.19.sml
functor F (type t
           type u) =
   struct
      val id: t -> u = fn x => x
   end
